Fix spacing

--- a/src/AppViewLite.Web/wwwroot/app.css
+++ b/src/AppViewLite.Web/wwwroot/app.css
@@ -1515,6 +1515,7 @@ button[disabled], input[type=submit][disabled] {
 
 .profile-badge {
     transition: opacity 0.25s;
+    margin-left: 4px;
 }
 
 .profile-badge-pending{
